# gv

./: pyproject.toml
notebooks/: Untitled.ipynb  code.txt  encrypt.ipynb  sample.json
notebooks/data/: encrypt.key  encrypt123.key  sample.json
tests/: test_globalvariables.py
