[tool.poetry]
name = "globalVariables"
version = "0.1.0"
description = ""
authors = ["Krishna <gopalkrishna.naredla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
